testsuite/tests/ghc-regress/parser/should_compile/read022.hs
module ShouldCompile where

f (x :: Int) = x + 1
