testsuite/tests/ghc-regress/parser/should_fail/readFail031.hs
module ShouldFail where

class Foo o where
  (:+) :: o -> o -> o
